cabal-version:       2.4
name:                missing-lens
version:             0.1.0.0
synopsis: Lenses missing from other packages
license-file:        LICENSE
build-type:          Simple

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Control.Lens.Missing
  build-depends:       base
                     , bytestring
                     , email-validate
                     , lens
                     , network-uri
                     , scientific
                     , text
                     , time
                     , uuid
  default-language:    Haskell2010
