cabal-version: 2.4
name:          missing-lens
version:       0.1.0.0
synopsis:      Lenses missing from other packages
license-file:  LICENSE
build-type:    Simple

library
  hs-source-dirs:   src
  ghc-options:      -Wall
  exposed-modules:  Control.Lens.Missing
  build-depends:
    , base            >=4.9
    , bytestring
    , email-validate  >=1.0
    , lens
    , network-uri >=2.6
    , scientific
    , text
    , time
    , uuid

  default-language: Haskell2010
